# funding_opportunity

./: .env  .gitignore  README.md  doc.txt  pyproject.toml  sent_files.txt
.github/workflows/: weekly_email.yml  weekly_email_v2.yml  weekly_email_v3.yml  weekly_email_v4.yml  weekly_email_v5.yml
downloads/: "AID"_results.csv  "Adolescent_Boys_Young_Men"_OR__"ABYM"_results.csv  "Adolescent_Girls_Young_Women"_OR_"AGYW"_results.csv  "Antimicrobial_Resistance"_results.csv  "Epidemiology"_results.csv  "HIV"_results.csv  "HIV_prevention"_OR_"HIV_treatment"_OR_"HIV_services"_OR_"HIV_sustainability"_results.csv  "Health_Financing"_results.csv  "Health_Systems_Policy"_results.csv  "Health_Systems_Research"_results.csv  "Health_Systems_Strengthening"_results.csv  "Health_Worker_Migration"_results.csv  "Health_Worker_Retention"_results.csv  "Human_Resources_for_Health"_results.csv  "Infectious_Disease"_results.csv  "Integrated_Health_Systems"_results.csv  "Non-communicable_Disease"_results.csv  "Public_Health"_results.csv  "Social_Determinants"_results.csv  "Tuberculosis"_results.csv  "Vaccines"_results.csv  "global_health_security"_results.csv  grants-gov-opp-search--20241009203349.csv
downloads_website/: Final_grants.gov.csv
funding_opportunity/: chrome-mac-arm64 3.code-workspace  grants_gov_scraper.py  scraper.py  send_email.py
